Implemented jwt authentication in api routes
